# sphinx-tabular

./: .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/_build/html/: .buildinfo  genindex.html  index.html  merge.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  merge.doctree
docs/_build/html/_static/: custom.css  sphinx-tabular.css
docs/_build_test/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js
docs/_build_test/.doctrees/: environment.pickle  glossary.doctree  index.doctree
docs/_build_test/.doctrees/directives/: mcsv-table.doctree  rcsv-table.doctree  rlist-table.doctree
docs/_build_test/.doctrees/errors/: cycle.doctree  value.doctree
docs/_build_test/.doctrees/formatting/: align.doctree  background.doctree  backgroundcolor.doctree  color.doctree  icons.doctree  status.doctree  (+1 more)
docs/_build_test/_sources/: index.rst
docs/_build_test/_static/: sphinx-tabular.js
docs/_build_test/directives/: mcsv-table.html  rcsv-table.html  rlist-table.html
docs/_build_test/errors/: cycle.html  value.html
docs/_build_test/formatting/: align.html  background.html  backgroundcolor.html  color.html  icons.html  status.html  theming.html
docs/_build_test/ops/: merge.html
docs/_build_test/options/: initial-sort.html  search.html  sort-types.html  sortable.html
docs/_build_test/spreadsheet/: arithmetic.html  average.html  cellref.html  concat.html  conditional.html  count.html  literaltext.html  max.html  min.html  rangeref.html  round.html  sum.html
docs/source/: align.rst  arithmetic.rst  average.rst  background.rst  backgroundcolor.rst  cellref.rst  concat.rst  conditional.rst  conf.py  count.rst  cycle.rst  glossary.rst  icons.rst  index.rst  literaltext.rst  max.rst  merge.rst  min.rst  rangeref.rst  round.rst  sortable.rst  value.rst
docs/source/_static/: custom.css
docs/source/directives/: mcsv-table.rst
docs/source/formatting/: color.rst  icons.rst  status.rst  theming.rst
docs/source/ops/: merge.rst
docs/source/options/: search.rst  sortable.rst
docs/source/spreadsheet/: arithmetic.rst  concat.rst  literaltext.rst
src/sphinx_tabular/: __init__.py  directive.py  formulas.py  html.py  markup.py  model.py  normalize.py  parser.py  render_nodes.py  rlist.py
src/sphinx_tabular/static/: sphinx-tabular.css  sphinx-tabular.js
tests/: conftest.py  test_bad_input_validation.py  test_basic_build.py  test_external_file.py  test_formulas.py  test_normalize.py  test_parser.py  test_rlist.py  test_searchable.py  test_sortable.py
tests/roots/basic/: conf.py  index.rst
tests/roots/invalid/: conf.py  file_plus_inline.rst  index.rst  missing_file.rst
tests/roots/invalid_file_plus_inline/: conf.py  index.rst
tests/roots/invalid_missing_file/: conf.py
tests/roots/test-rlist/: conf.py  index.rst
tests/roots/test-searchable/: conf.py  index.rst
tests/roots/test-sortable/: conf.py  index.rst
(+34 files in other folders)
