[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-tabular"
version = "0.1.0"
description = "Sphinx directives for RCSV and MCSV tabular authoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sphinx>=7",
  "docutils>=0.20",
  "myst-parser>=5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "beautifulsoup4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sphinx_tabular = ["static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]